# USDForUnity

./: .gitignore  Readme.md
Plugin/: AddDLLSearchPath.vcxproj  AddDLLSearchPath.vcxproj.filters  CMakeLists.txt  GraphicsInterface.vcxproj  GraphicsInterface.vcxproj.filters  MeshUtils.vcxproj  MeshUtils.vcxproj.filters  Test.vcxproj  Test.vcxproj.filters  USDExporter.vcxproj  USDExporter.vcxproj.filters  USDImporter.vcxproj  USDImporter.vcxproj.filters  USDPlugins.sln  setup.bat  setup.ps1  setup.vcxproj  usdi.sln  usdi.vcxproj  usdi.vcxproj.filters  usdiHelper.vcxproj  usdiHelper.vcxproj.filters  usdiRT.vcxproj  usdiRT.vcxproj.filters
Plugin/AddDLLSearchPath/: AddDLLSearchPath.cpp
Plugin/GraphicsDevice/: GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceD3D11.cpp  GraphicsDeviceD3D9.cpp  GraphicsDeviceOpenGL.cpp
Plugin/GraphicsInterface/: CMakeLists.txt  GraphicsInterface.cpp  GraphicsInterface.h  GraphicsInterfaceD3D11.cpp  GraphicsInterfaceD3D12.cpp  GraphicsInterfaceD3D9.cpp  GraphicsInterfaceOpenGL.cpp  giInternal.h  pch.h
Plugin/MeshUtils/: MeshUtils.cpp  MeshUtils.h  MeshUtilsCore.ispc  muAllocator.cpp  muAllocator.h  muMeshRefiner.cpp  muSIMDConfig.h  muVector.h  pch.h
Plugin/Test/: CMakeLists.txt  Cube.usda  Mesh.cpp  Mesh.h  MeshUtilsTest.cpp  MeshUtilsTest.vcxproj  Test.cpp  Test.vcxproj  TestMain.vcxproj  pch.h  usdiTestExport.cpp  usdiTestExport.vcxproj  usdiTestExportHighMesh.cpp  usdiTestExportSkinnedMesh.cpp  usdiTestImport.cpp  usdiTestImport.vcxproj  usdiTests.cpp  usdiTests.h  usdiTests.vcxproj  usdiTestsMain.cpp  usdiTestsMain.vcxproj
Plugin/USDExporter/: USDExporter.cpp  USDExporter.h  pch.h
Plugin/USDImporter/: USDImporter.cpp  USDImporter.h  pch.h  usdiContext.cpp  usdiContext.h  usdiInternal.cpp  usdiInternal.h  usdiMesh.cpp  usdiPolyMesh.cpp  usdiPolyMesh.h  usdiSchema.cpp  usdiSchema.h  usdiXform.cpp  usdiXform.h
Plugin/Vertex/: VertexOperations.ispc
Plugin/build_bundle/: loader_path.rb
Plugin/cmake/: FindDoubleConversion.cmake  FindGLEW.cmake  FindTBB.cmake  FindUSD.cmake
Plugin/usdi/: CMakeLists.txt  DllMain.cpp  HandleBasedVector.h  UnityPlugin.cpp  pch.h  usdi.cpp  usdi.h  usdiAsyncManager.h  usdiAttribute.cpp  usdiAttribute.h  usdiCamera.cpp  usdiCamera.h  usdiConfig.h  usdiContext.cpp  usdiContext.h  usdiContext.i  usdiExt.cpp  usdiExt.h  usdiInternal.cpp  usdiInternal.h  usdiInternal.i  usdiMesh.cpp  usdiMesh.h  usdiPoints.cpp  usdiPoints.h  usdiSIMD.cpp  usdiSIMD.h  usdiSchema.cpp  usdiSchema.h  usdiUnknown.cpp  usdiUnknown.h  usdiUtils.cpp  usdiUtils.h  usdiVectorConversion.h  usdiXform.cpp  usdiXform.h
Plugin/usdi/Foundation/: aiMath.cpp  aiMath.h  aiMeshOps.cpp  aiMeshOps.h  aiMisc.h
Plugin/usdi/etc/: Allocator.cpp  Allocator.h  FixedAllocator.cpp  FixedAllocator.h  HandleBasedVector.h  Hook.cpp  Hook.h  Mono.cpp  Mono.h  MonoWrapper.cpp  MonoWrapper.h  MonoWrapperImpl.h  MonoWrapper_Cache.cpp  Platform.h  RawVector.h  tls.h
Plugin/usdi/ext/: UnityEngineBinding.cpp  UnityEngineBinding.h  usdiComponentUpdater.cpp  usdiComponentUpdater.h  usdiComponentUpdator.cpp  usdiComponentUpdator.h  usdiExt.cpp  usdiExt.h  usdiExtTask.cpp  usdiExtTask.h  usdiInternalMethods.cpp  usdiInternalMethods.h  usdiProgressReporter.cpp  usdiProgressReporter.h  usdiTask.cpp  usdiTask.h  usdiUnity.cpp  usdiUnity.h
Plugin/usdiHelper/: Platform.h  usdiHelper.cpp  usdiHelper.h
Plugin/usdiRT/: CMakeLists.txt  pch.h  usdiRT.cpp  usdiRT.h
USDForUnity/Assets/: TestExport.unity  TestExport_Cloth.unity  TestExport_Simple.unity  TestImport.unity  usdiPackaging.cs
USDForUnity/Assets/StreamingAssets/USDForUnity/: License.txt
USDForUnity/Assets/StreamingAssets/UTJ/USDForUnity/: License.txt
USDForUnity/Assets/TestData/Animation/: Cube.controller  Floor.controller  Test.anim
USDForUnity/Assets/TestData/Editor/: USDTestMenu.cs
USDForUnity/Assets/USDExamples/: ExportCloth.unity  ExportSimple.unity  ExportTransform.unity  ImportSkinnedMesh.unity  SkinnedMesh.usda
USDForUnity/Assets/USDExamples/Animation/: Cube.controller  Floor.controller  Test.anim
USDForUnity/Assets/USDExamples/Editor/: USDTestMenu.cs
USDForUnity/Assets/UTJ/Misc/Editor/: MiscDebugMenu.cs
USDForUnity/Assets/UTJ/Misc/Scripts/: Bool.cs  DataPath.cs
USDForUnity/Assets/UTJ/USDForUnity/Editor/: SerializableObjHelper.cs  TimeUnitDrawer.cs  USDImporter.cs  USDImporterInspector.cs  UsdAssetConverter.cs  UsdCameraEditor.cs  UsdComponentEditor.cs  UsdExporterEditor.cs  UsdImportWindow.cs  UsdMenu.cs  UsdMeshEditor.cs  UsdPointsEditor.cs  UsdPrecomputeNormalsWindow.cs  UsdStreamEditor.cs  UsdXformEditor.cs  usdiCameraEditor.cs  usdiElementEditor.cs  usdiExporterEditor.cs  usdiImportWindow.cs  usdiMenu.cs  usdiMeshEditor.cs  usdiPointsEditor.cs  usdiPrecomputeNormalsWindow.cs  usdiStreamEditor.cs  usdiTimeUnitDrawer.cs  usdiXformEditor.cs
USDForUnity/Assets/UTJ/USDForUnity/Prefabs/: USDExporter.prefab
USDForUnity/Assets/UTJ/USDForUnity/Scripts/: TimeUnit.cs  UsdCamera.cs  UsdCameraComponent.cs  UsdComponent.cs  UsdCustomComponentCapturer.cs  UsdExporter.cs  UsdMesh.cs  UsdMeshComponent.cs  UsdMeshExportSettings.cs  UsdParticleExportSettings.cs  UsdPoints.cs  UsdPointsComponent.cs  UsdSchema.cs  UsdStream.cs  UsdSubmesh.cs  UsdTransformExportSettings.cs  UsdXform.cs  UsdXformComponent.cs  usdi.cs  usdiCamera.cs  usdiCameraElement.cs  usdiCustomComponentCapturer.cs  usdiElement.cs  usdiExporter.cs  usdiInternal.cs  usdiMesh.cs  usdiMeshElement.cs  usdiMeshExportConfig.cs  usdiParticleExportConfig.cs  usdiPoints.cs  usdiPointsElement.cs  usdiSchema.cs  usdiSplitMesh.cs  usdiStream.cs  usdiSubmesh.cs  usdiTimeUnit.cs  usdiTransformExportConfig.cs  usdiXform.cs  usdiXformElement.cs
USDForUnity/Assets/UTJ/USDForUnity/Shaders/: MotionVectors.shader  Overlay.shader  PointsMotionVectors.shader  Standard.shader  StandardInstanced.shader  StandardRoughness.shader  StandardSpecular.shader  (+1 more)
USDForUnity/ProjectSettings/: ClusterInputManager.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  ProjectVersion.txt  UnityConnectSettings.asset
(+48 files in other folders)
